# FFT-Project

./: Helpful_functions.cpp  README.md  fft.h  fft.hpp  filt.cpp  filt.h  main.cpp  main.pro  server.cpp  server.h  spec_samples.csv
GUI SERVER/: Makefile  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  spectrogram  ui_mainwindow.h
NeuralNetwork/: CMakeLists.txt  Model.txt  NeuralNetwork.cpp  NeuralNetwork.h  Training.h  main.cpp
NeuralNetwork/TrainingTestingFiles/: readme.md
PythonAudioProcessing/: create_soundwaves.py  generate_nn_files.py  process_audio_sounds.py  requirements.txt
